<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".eliminar">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="323dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/ingrese_la_c_dula_de_la_persona_que_desea_eliminar"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_cedula_eliminar"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/digite_c_dula"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="117dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:background="#3F51B5"
        android:text="@string/eliminar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cedula_eliminar" />

    <Button
        android:id="@+id/btn_cancelar_eliminar"
        android:layout_width="117dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:background="#3F51B5"
        android:text="@string/cancelar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_eliminar" />

</androidx.constraintlayout.widget.ConstraintLayout>